--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
@@ -282,9 +282,20 @@ $mm-dark-hover-color:                   scale-color($mm-bg, $lightness: 15%); //
 }
 
 /* Product rotator */
-.megamenu-container .rotator-content {
-    border: 1px solid rgba(0, 0, 0, 0.12);
+.megamenu-container .rotator-container {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: rgba($dropdown-bg, 0.92);
     overflow: hidden;
+}
+
+.megamenu-container .rotator-heading {
+    padding: 0.5rem 0;
+}
+
+.megamenu-container .rotator-content {
+    /*border: 1px solid rgba(0, 0, 0, 0.12);
+    background: rgba($dropdown-bg, 0.92);
+    overflow: hidden;*/
 }
 .megamenu-container .rotator-content > div.placeholder {
     height: 280px;
@@ -293,29 +304,6 @@ $mm-dark-hover-color:                   scale-color($mm-bg, $lightness: 15%); //
 .megamenu-container .rotator-content > div.placeholder.empty {
     background-color: transparent;
 }
-.mega-menu-product-rotator .pl-row,
-.mega-menu-product-rotator .item-box {
-    width: 100%;
-    border: none;
-}
-.mega-menu-product-rotator.scroll .item-box {
-    min-width: 245px;
-    max-width: 245px;
-    margin-bottom: 0;
-}
-.mega-menu-product-rotator.scroll .btn-group {
-    width: 100%;
-}
-.mega-menu-product-rotator.scroll .scroll-button {
-    top: initial !important;
-    position: initial;
-    margin-left: 0;
-}
-.mega-menu-product-rotator.scroll .scroll-button i {
-    width: initial;
-}
-
-
 
 
 
