--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Brand.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.Brand.cshtml
@@ -7,6 +7,7 @@
 	{
 		if (Model.Manufacturer.Picture != null && Model.Parent.ViewMode == ProductSummaryViewMode.List)
 		{
+			// TODO: (mc) (low) Whether to link or not > make setting.
 			var picture = Model.Manufacturer.Picture;
 			<a href="@Url.RouteUrl("Manufacturer", new RouteValueDictionary { { "SeName", Model.Manufacturer.SeName } })" title="@picture.Title">
 				<img src="@picture.ImageUrl" alt="@picture.AlternateText" class="art-brand-picture" />
