Found a better place for plugin action buttons

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_megamenu.scss
@@ -246,7 +246,7 @@ $mm-dark-hover-color:                   scale-color($mm-bg, $lightness: 15%); //
 
 
 
-/* TODO: correct enum BadgeStyle, determine valid entries for bs4 */
+/* TODO: (mc) > (mh) correct enum BadgeStyle, determine valid entries for bs4 */
 .megamenu .label-important {
     background: #0275d8; /* $brand-primary */
 }
