--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = T("Admin.Common.Configure").Text + " - " + Model.FriendlyName;
 }
 
+<script>
+	$(function () {
+		Admin.movePluginActionButtons();
+	});
+</script>
+
 <div class="section-header">
     <div class="title">
 		<img src="@Url.Content(Model.IconUrl)" alt="@Model.FriendlyName" />
@@ -21,22 +27,24 @@
 	}
 </div>
 
-@if (Model.ConfigurationRoute != null && Model.ConfigurationRoute.Action.HasValue())
-{
-	try
+<div class="plugin-config-container">
+	@if (Model.ConfigurationRoute != null && Model.ConfigurationRoute.Action.HasValue())
 	{
-		Html.RenderAction(Model.ConfigurationRoute.Action, Model.ConfigurationRoute.Controller, Model.ConfigurationRoute.RouteValues);
-	}
-	catch (Exception exception)
-	{
-		<div class="alert alert-error">
-			@T("Admin.Configuration.Plugins.UnknownError")
-		</div>
+		try
+		{
+			Html.RenderAction(Model.ConfigurationRoute.Action, Model.ConfigurationRoute.Controller, Model.ConfigurationRoute.RouteValues);
+		}
+		catch (Exception exception)
+		{
+			<div class="alert alert-error">
+				@T("Admin.Configuration.Plugins.UnknownError")
+			</div>
 
-		<pre>@exception.ToString()</pre>
+			<pre>@exception.ToString()</pre>
+		}
 	}
-}
-else
-{
-    @T("Admin.Common.ConfigurationNotRequired")
-}
+	else
+	{
+		@T("Admin.Common.ConfigurationNotRequired")
+	}
+</div>
