Minor UI tweak in backend

--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigurePlugin.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigurePlugin.cshtml
@@ -11,9 +11,9 @@
 </script>
 
 <div class="section-header">
-	<div class="title">
+	<div class="title" title="@ViewBag.Title (@Model.SystemName)">
 		<img src="@Url.Content(Model.IconUrl)" alt="@Model.FriendlyName" />
-		@ViewBag.Title <span class="subtitle muted">(@(Model.SystemName))</span>
+		@ViewBag.Title
 		<a href='@Url.Action("List")'>(@T("Admin.Common.BackToList"))</a>
 	</div>
 	<div class="options">	
