--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -11,9 +11,9 @@
 </script>
 
 <div class="section-header">
-    <div class="title">
+    <div class="title" title="@ViewBag.Title (@Model.SystemName)">
 		<img src="@Url.Content(Model.IconUrl)" alt="@Model.FriendlyName" />
-        @ViewBag.Title <span class="muted">(@(Model.SystemName))</span>
+        @ViewBag.Title
 		<a href="@ViewBag.ListUrl">(@T("Admin.Common.BackToList"))</a>
     </div>
 	@if (Model.PluginDescriptor != null)
