--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -319,3 +319,14 @@ body {
         }
     }
 }
+
+
+//
+// Profiler sucks on small screens
+// ------------------------------------------------------
+
+@include media-breakpoint-down(sm) {
+    .profiler-results {
+        display: none !important;
+    }
+}
