--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -18,7 +18,7 @@
 	<div class="art-picture-block">
 		@if (picture.Title.HasValue())
 		{
-			<a class="art-picture" href="@artDetailUrl" title="@picture.Title">
+			<a class="art-picture img-center-container" href="@artDetailUrl" title="@picture.Title">
 				<img src="@picture.ImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
 			</a>
 		}
