--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/smart-gallery/scss/_main.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/smart-gallery/scss/_main.scss
@@ -1,26 +1,8 @@
-/* -------------------------------------------------------------- 
- 	SmartStore Widget: smartstore.smartgallery.css
--------------------------------------------------------------- */
 
 .sb { position: absolute }
 
 .smart-gallery {
 	width: 600px;
-}
-
-.sg-image-wrapper {
-    position: relative !important;
-	width: 100%;
-    min-height: 300px; /* just to avoid page load flickering. This is overwritten per inline css anyway */
-	margin-bottom: 5px;
-	position: relative;
-	overflow: hidden;
-	outline: 1px solid transparent;
-    text-align: center;
-}
-
-.sg-image-wrapper > img {
-    max-height: 100%; /* avoids page load flickering */
 }
 
 .sg-loader {
@@ -30,47 +12,32 @@
     top: 0;
     right: 0;
     bottom: 0;
+    //background: rgba(255,255,255, 0.8);
+}
+
+.sg-image-wrapper {
+    position: relative !important;
+	width: 100%;
+    min-height: 300px; /* just to avoid page load flickering. This is overwritten per inline css anyway */
+	margin-bottom: 1rem;
+	position: relative;
+	overflow: hidden;
+	outline: 1px solid transparent;
+    text-align: center;
 }
 
 .sg-image {
-	position: absolute;
+	position: relative;
 	overflow: hidden;
 	top: 0;
 	left: 0;
-	height: 300px;
-	max-width: 100%;
-	/*z-index: 9;*/
-}
+    right: 0;
+    bottom: 0;
+    transition: transform 0.3s ease-in-out;
+    transform: translate3d(0, 0, 0);
 
-.sg-image a {
-	display: inline-block;
-    max-width: 100%;
-}
-
-.sg-image a img {
-	border: 0;
-	max-height: 100%;
-	max-width: 100%;
-}
-      
-.sg-image-description {
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	padding: 7px;
-	text-align: left;
-	width: 100%;
-	z-index: 11;
-	background-color: rgba(0,0,0, .5);
-	color: #fff;
-}
-
-.no-rgba .sg-image-description {
-	background-color: #646464;
-}
-
-.sg-description-title {
-	display: block;
+    &.out-left { position: absolute; transform: translate3d(-100%, 0, 0);  }
+    &.out-right { position: absolute; transform: translate3d(100%, 0, 0);  }
 }
 
 
@@ -102,7 +69,7 @@
     margin-right: 19px;
 }
 
-.sg-thumb-list li {
+.sg-thumb-list > li {
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -111,39 +78,33 @@
     float: left;
     padding: 0;
 	margin-left: -1px;
-}
-.sg-thumb-list li:first-child {
-	margin-left: 0;
+
+    &:first-child { margin-left: 0; }
 }
 
-.sg-thumb-list li a {
+
+.sg-thumb-list-link {
 	position: relative;
 	z-index: 0;
 	display: block;
     border: 1px solid #ddd;
 	background-color: #fff;
 	outline: none;
-    
     overflow: hidden;
-    -webkit-transition: all 0.1s ease-in;
-         -o-transition: all 0.1s ease-in;
-            transition: all 0.1s ease-in;
-	
+    transition: all 0.1s ease-in;
 	box-sizing: border-box;
     width: 60px;
     height: 60px;
 	line-height: 52px;
 	text-align: center;
-    /*vertical-align: middle;*/
+
+    &:hover, &.sg-active {
+        border-color: #999;
+	    z-index: 1;
+    }
 }
 
-.sg-thumb-list li a:hover,
-.sg-thumb-list li a.sg-active {
-    border-color: #999;
-	z-index: 1;
-}
-
-.sg-thumb-list li a > img {
+.sg-thumb-list-img {
 	margin: 3px;
 	max-width: 52px;
 	max-height: 52px;
@@ -152,8 +113,7 @@
 .sg-scroll-back,
 .sg-scroll-forward {
 	position: absolute;
-    -webkit-box-shadow: 0 0 4px rgba(0,0,0, .15);
-            box-shadow: 0 0 4px rgba(0,0,0, .15);
+    box-shadow: 0 0 4px rgba(0,0,0, .15);
 	z-index: 30;
 	height: 100%;
 	width: 20px;
@@ -173,7 +133,7 @@
 	top: 0;
 	right: 0;
 	bottom: 0;
-	background: -webkit-linear-gradient(left, #fff, rgba(255,255,255, 0) 3%, rgba(255,255,255, 0) 97%, #fff 100%);
+    background: linear-gradient(to right, #fff, rgba(255,255,255, 0) 3%, rgba(255,255,255, 0) 97%, #fff 100%);
 }
             
 /* Can't do display none, since Opera won't load the images then */
@@ -195,8 +155,7 @@
 
 .zoomWindow,
 .zoomLens {
-   -webkit-box-shadow: 0 0 10px rgba(0,0,0, 0.4);
-           box-shadow: 0 0 10px rgba(0,0,0, 0.4);
+    box-shadow: 0 0 10px rgba(0,0,0, 0.4);
     display: none;
 }
 
