--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -125,6 +125,7 @@ $pagination-active-border:      $pagination-border-color;
 @import "_login.scss";
 @import "_rating.scss";
 @import "_artlist.scss";
+@import "_product_old.scss";
 @import "_product.scss";
 @import "_cart.scss";
 @import "_megamenu.scss";
@@ -168,7 +169,9 @@ body {
 
 
 .block {
-    margin-bottom: 1.8rem;
+    &:not(:last-child) {
+        margin-bottom: 1.8rem;
+    }   
 
     .block-title {
         font-size: $font-size-h3;
@@ -328,5 +331,30 @@ body {
 @include media-breakpoint-down(sm) {
     .profiler-results {
         display: none !important;
+    }
+}
+
+
+// Image centering
+// ------------------------------------------------------
+
+.img-center-container {
+    display: block;
+    position: relative;
+    height: 0;
+    width: 100%;
+    padding-top: 100%;
+    text-decoration: none !important;
+    outline: none !important;
+
+    > img {
+        position: absolute;
+        max-width: 100%;
+        max-height: 100%;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
     }
 }
