--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/ProductBreadcrumb.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/ProductBreadcrumb.cshtml
@@ -1,8 +1,14 @@
 ﻿@model ProductDetailsModel.ProductBreadcrumbModel
 @using SmartStore.Web.Models.Catalog;
-<ul id="breadcrumb" class="breadcrumb">
+
+@{ 
+	// TODO: (mc) Upgrade breadcrumb to BS4 (nav > a)
+	// TODO: (mc) Implement shared breadcrumb widget (for category, product, search etc.)
+}
+
+<ol id="breadcrumb" class="breadcrumb">
     @Html.Widget("productbreadcrumb_before")
-    <li>
+    <li class="breadcrumb-item">
         <a href="@Url.RouteUrl("HomePage")" title="@T("Categories.Breadcrumb.Top")" itemprop="url">
             <i class="fa fa-home"></i>
         </a>
@@ -10,7 +16,7 @@
     @for (int i = 0; i < Model.CategoryBreadcrumb.Count; i++)
     {
         var menuItem = Model.CategoryBreadcrumb[i];
-        <li>
+        <li class="breadcrumb-item">
             <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
                 <a href="@menuItem.GenerateUrl(this.Url)" title="@menuItem.Text" itemprop="url">
                     <span itemprop="title">@menuItem.Text</span>
@@ -19,11 +25,11 @@
         </li>
     }
     @*uncomment to enable clickable link
-    <li>
-        <a href="@Url.RouteUrl("Product", new { productId = Model.ProductId, SeName = Model.ProductSeName })">@Model.ProductName</a>
-        @Html.Widget("productbreadcrumb_after")
-    </li>
-    *@
+	<li class="breadcrumb-item">
+		<a href="@Url.RouteUrl("Product", new { productId = Model.ProductId, SeName = Model.ProductSeName })">@Model.ProductName</a>
+		@Html.Widget("productbreadcrumb_after")
+	</li>
+	*@
 
-    <li>@Model.ProductName</li>
-</ul>
+    <li class="breadcrumb-item active">@Model.ProductName</li>
+</ol>
