Theming: Image gallery (based on slick)

--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Info.cshtml
@@ -6,8 +6,8 @@
 
 }
 
-<div class="pd-info">
-	<div class="page-title hidden-lg-down" itemprop="name">
+<div class="pd-info m-b-1">
+	<div class="page-title x-hidden-md-down" itemprop="name">
 		<h1 class="pd-name pd-name-sm">
 			@Model.Name
 		</h1>
