--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.SideBar.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.SideBar.cshtml
@@ -6,8 +6,8 @@
 
 }
 
-<div class="pd-sidebar">
-	<button type="button" class="btn btn-primary btn-block">
+<div class="pd-sidebar p-t-4">
+	<button type="button" class="btn btn-primary btn-lg btn-block">
 		<i class="fa fa-shopping-cart"></i>
 		<span>In den Warenkorb</span>
 	</button>
