--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_slick-theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_slick-theme.scss
@@ -5,71 +5,98 @@
 // General
 // ------------------------------------------------------
 
-.no-touch .slick-slider.slick-dotted {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
 .slick-loading .slick-list {
     background: #fff url('images/loading.gif') center center no-repeat;
+}
+
+img.slick-loading {
+    opacity: 0;
 }
 
 
 // Buttons
 // ------------------------------------------------------
 
-.slick-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    z-index: 100;
-    transition: opacity 0.2s linear;
-    height: 6rem;
-    line-height: 6rem;
-    padding-top: 0;
-    padding-bottom: 0;
-    opacity: 0;
+.gal-box {
+    .slick-arrow {
+        font-size: 2rem;
+    }
+    
+    .slick-arrow.slick-disabled {
+        opacity: 0.2;
+        background: transparent !important;
+    }
 
-    &:hover, &:focus, &:active, &:active:focus {
-        background: $btn-secondary-bg;
-        border-color: $btn-secondary-border;
+    .gal-nav {
+        .slick-arrow {
+            line-height: 1;
+            padding: 0;
+        }
     }
 }
 
-.slick-slider:hover .slick-arrow {
-    opacity: 1;
-}
-.slick-slider:hover .slick-arrow.slick-disabled {
-    opacity: 0.4;
-}
+.artlist-carousel {
+    .no-touch .slick-slider.slick-dotted {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 
-.slick-prev { 
-    left: 0; 
-    right: auto; 
-    border-radius: 0 $btn-border-radius-lg $btn-border-radius-lg 0;
-    border-left: none;
-    box-shadow: 1px 1px 3px rgba(0,0,0, 0.12);
-}
+    .slick-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translate(0, -50%);
+        z-index: 100;
+        transition: opacity 0.2s linear;
+        height: 6rem;
+        line-height: 6rem;
+        padding-top: 0;
+        padding-bottom: 0;
+        opacity: 0;
 
-.slick-next { 
-    right: 0; 
-    left: auto; 
-    border-radius: $btn-border-radius-lg 0 0 $btn-border-radius-lg;
-    border-right: none;
-    box-shadow: -1px 1px 3px rgba(0,0,0, 0.12);
-}
+        &:hover, &:focus, &:active, &:active:focus {
+            background: $btn-secondary-bg;
+            border-color: $btn-secondary-border;
+        }
 
-.slick-arrow.slick-disabled {
-    color: $gray-lighter !important;
-    cursor: default;
-    box-shadow: none !important;
-    border-color: $btn-secondary-border !important;
+        &:active, &:active:focus {
+            box-shadow: inset 0 3px 5px rgba(0,0,0, 0.125);
+        }
+    }
+
+    .slick-slider:hover .slick-arrow {
+        opacity: 1;
+    }
+    .slick-slider:hover .slick-arrow.slick-disabled {
+        opacity: 0.4;
+    }
+
+    .slick-prev { 
+        left: 0; 
+        right: auto; 
+        border-radius: 0 $btn-border-radius-lg $btn-border-radius-lg 0;
+        border-left: none;
+        box-shadow: 1px 1px 3px rgba(0,0,0, 0.12);
+    }
+
+    .slick-next { 
+        right: 0; 
+        left: auto; 
+        border-radius: $btn-border-radius-lg 0 0 $btn-border-radius-lg;
+        border-right: none;
+        box-shadow: -1px 1px 3px rgba(0,0,0, 0.12);
+    }
+
+    .slick-arrow.slick-disabled {
+        color: $gray-lighter !important;
+        cursor: default;
+        box-shadow: none !important;
+        border-color: $btn-secondary-border !important;
+    }
 }
 
 .touch .slick-arrow {
     display: none !important;
 }
-
 
 // Dots
 // ------------------------------------------------------
@@ -126,23 +153,3 @@
     opacity: 1;
 }
 
-/*.slick-dots li button:before {
-    font-family: 'fontawesome';
-    font-size: 8px;
-    line-height: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    //content: "\f111"; // fa-circle
-    text-align: center;
-    opacity: .25;
-    color: black;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.slick-dots li.slick-active button:before {
-    opacity: .75;
-    color: #666;
-}*/
