--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/smart-gallery/scss/_main.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/smart-gallery/scss/_main.scss
@@ -1,4 +1,111 @@
 
+// Image Gallery
+// ========================================
+
+.gal-box {
+    position: relative; 
+    display: table; 
+    width: 100%; 
+    table-layout: fixed;
+}
+
+.gal {
+	position: relative;
+}
+
+.gal-item {
+	position: relative;
+	overflow: hidden;
+}
+
+.gal-item-link {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 0;
+	padding-top: 100%;
+	text-align: center;
+	outline: none !important;
+}
+
+.gal-item-img {
+	position: absolute;
+	display: none;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.gal-nav {
+	overflow: hidden;
+	max-height: 548px;
+	opacity: 0;
+	text-align: center;
+    
+    &.slick-initialized {
+	    opacity: 1;
+    }
+}
+
+.gal-nav .gal-item {
+	border: 1px solid rgba(0,0,0, 0.12);
+	margin: 4px 0;
+}
+.gal-nav .gal-item.slick-current,
+.gal-nav .gal-item:hover {
+	border-color: rgba(0,0,0, 0.7);
+}
+
+.gal-nav .gal-item {
+	cursor: pointer;
+}
+
+.gal-nav .gal-item-img {
+	padding: 3px;
+}
+
+.touch .gal-nav-cell {
+	display: none !important;
+}
+
+.gal-nav-cell {
+	display: table-cell; 
+	vertical-align: top; 
+	padding-right: 1.2rem; 
+	max-height: 100%; 
+	overflow: hidden;
+	width: 4.5rem;
+}
+
+.gal-cell {
+    display: table-cell; 
+    vertical-align: top;
+}
+
+@media (min-width: 992px) {
+	.no-touch .gal .slick-dots {
+		display: none !important;
+	}
+
+	.no-touch .gal.slick-dotted.slick-slider {
+		margin-bottom: 0 !important;
+	}
+}
+
+@media (min-width: 1200px) {
+	.gal-nav-cell {
+		width: 5.5rem;
+	}
+}
+
+
+
 .sb { position: absolute }
 
 .smart-gallery {
