--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -17,6 +17,10 @@ $enable-grid-classes:           true;
 $body-color:                    #333;
 $link-color:                    #08c;
 
+$brand-primary:                 #3f51b5; // #0275d8
+$brand-danger:                  #f44336; // #d9534f;
+$brand-warning:                 #ff9800; // #f0ad4e;
+
 $headings-line-height:          1.3;
 
 /*$font-family-sans-serif:    'Roboto', Helvetica, Arial, sans-serif;*/ 
