Fixed picture alignment of manufacturer list

--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -22,7 +22,7 @@
 					<div class="art-picture-block">
 						@if (picture != null && picture.ImageUrl.HasValue())
 						{
-							<a class="art-picture" href="@url" title="@picture.Title">
+							<a class="art-picture img-center-container" href="@url" title="@picture.Title">
 								<img src="@picture.ImageUrl" alt="@picture.AlternateText" />
 							</a>
 						}
