Theming: Image Gallery (thumb nav, zooming, glimpsing etc.)

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
@@ -25,7 +25,7 @@
 
     // add js assets (Head)
     Html.AppendScriptParts(ResourceLocation.Head,
-        "~/Scripts/modernizr-2.7.2.js",
+        //"~/Scripts/modernizr.js", // TODO: (mc) Modernizr freezes in admin (maybe old jQuery version?)
         // Telerik doesn't like jQuery 1.9+, a shame!
         "~/Administration/Scripts/jquery-1.8.3.js",
         "~/Scripts/globalize/globalize.js",
