--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -22,7 +22,7 @@
 		cssRoot + "jquery.pnotify.default.icons.css");
 
 	Html.AppendScriptParts(ResourceLocation.Head,
-		"~/Scripts/modernizr-2.7.2.js",
+		"~/Scripts/modernizr.js",
 		"~/Scripts/jquery-2.1.1.js",
 		"~/Scripts/jquery-migrate-1.2.1.js",
 		"~/Scripts/globalize/globalize.js");
