--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -25,7 +25,7 @@
     <link href='~/Content/install/install.less' type='text/css' rel='stylesheet' />
 
     @* scripts (head) *@
-    <script src='~/Scripts/modernizr-2.7.2.js' type='text/javascript'></script>
+    <script src='~/Scripts/modernizr.js' type='text/javascript'></script>
     <script src='~/Scripts/jquery-2.1.1.min.js' type='text/javascript'></script>
 	<script src='~/Scripts/jquery-migrate-1.2.1.min.js' type='text/javascript'></script>
     <script src='~/Content/bootstrap/js/bootstrap-button.js' type='text/javascript'></script>
