--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
@@ -7,32 +7,34 @@
 
 <div id="pd-gallery-container-outer">
 	<div id="pd-gallery" class="gal-box m-b-1">
-		@if (Model.PictureModels.Count > 1)
-		{
-			<div class="gal-nav-cell hidden-md-down">
-				<div class="gal-nav">
-					@for (int i = 0; i < Model.PictureModels.Count; i++)
-					{
-						var picture = Model.PictureModels[i];
-						<div class="gal-item">
-							<div class="gal-item-viewport" href="#" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-picture-id="@picture.PictureId">
-								<img class="gal-item-content" src="@picture.ThumbImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
+		<div class="gal-nav-cell@(Model.PictureModels.Count <= 1 ? " gal-nav-hidden" : " ")">
+			<div class="gal-nav">
+				<div class="gal-list">
+					<div class="gal-track">
+						@for (int i = 0; i < Model.PictureModels.Count; i++)
+						{
+							var picture = Model.PictureModels[i];
+							<div class="gal-item">
+								<a class="gal-item-viewport" href="@picture.FullSizeImageUrl" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-gallery="default" data-picture-id="@picture.PictureId">
+									<img class="gal-item-content" src="@picture.ThumbImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
+								</a>
 							</div>
-						</div>
-					}
+						}
+					</div>
+
 				</div>
 			</div>
-		}
+		</div>
 
 		<div class="gal-cell">
 			<div class="gal">
-				@if (Model.PictureModels.Count > 1)
+				@if (Model.PictureModels.Count > 0)
 				{
 					for (int i = 0; i < Model.PictureModels.Count; i++)
 					{
 						var picture = Model.PictureModels[i];
 						<div class="gal-item">
-							<a class="gal-item-viewport" href="@picture.FullSizeImageUrl" data-thumg-image="@picture.ThumbImageUrl" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-gallery="default" data-picture-id="@picture.PictureId">
+							<a class="gal-item-viewport" href="@picture.FullSizeImageUrl" data-thumg-image="@picture.ThumbImageUrl" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-picture-id="@picture.PictureId">
 								@if (i == Model.GalleryStartIndex)
 								{
 									<img class="gal-item-content" src="@picture.ImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
